--- a/404.html
+++ b/404.html
@@ -21,4 +21,6 @@ layout: default
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  
+  <p><a href="/blog/index.html">/blog/index.html</a> or <a href="/index.html">/index.html</a></p>
 </div>
